force-app/main/default/objects/WorkOrder/fields/Address_from_Account__c.field-meta.xml
<CustomField>
    <fullName>Address_from_Account__c</fullName>
    <formula>Account.ShippingStreet &amp; BR() &amp;
 Account.ShippingCity  &amp; &quot;,&quot; &amp;
 Account.ShippingState &amp; &quot;,&quot; &amp;
 Account.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Address auto populated from Account when account selected</inlineHelpText>
    <label>Address Auto</label>
    <type>Text</type>
</CustomField>