force-app/main/default/objects/WorkOrder/fields/ASR__c.field-meta.xml
<CustomField>
    <fullName>ASR__c</fullName>
    <label>ASR</label>
    <length>25</length>
    <type>Text</type>
</CustomField>