force-app/main/default/objects/WorkOrder/fields/Customer_Care_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Customer_Care_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Care Campaign</label>
    <referenceTo>Customer_Care_Campaign__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>