force-app/main/default/objects/WorkOrder/fields/Sales_Order_LU__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_LU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>important field when work type PDI is selected</description>
    <label>Sales Order</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sales_Order__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>