force-app/main/default/objects/WorkOrder/fields/Service_Request_Count__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Count__c</fullName>
    <description>The Roll Up summary for the Service Requests</description>
    <label>Number of Service Request</label>
    <summaryForeignKey>Bus_Work_Order__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>