force-app/main/default/objects/WorkOrder/fields/Single_Work_Day__c.field-meta.xml
<CustomField>
    <fullName>Single_Work_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <description>will auto populate the multi day checkbox field in Service Appointment if unchecked</description>
    <label>Single Work Day</label>
    <type>Checkbox</type>
</CustomField>