force-app/main/default/objects/WorkOrder/fields/Transfer_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Quantity__c</fullName>
    <description>This field updates when the Sales Order is selected in the work order ( work type - PDI) and based on this number the Service requests are created</description>
    <label>Quantity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>