force-app/main/default/objects/WorkOrder/fields/tSales_Order__c.field-meta.xml
<CustomField>
    <fullName>tSales_Order__c</fullName>
    <description>auto populate from the Bus Work Order to Work order, not used since sales order entered from work order</description>
    <inlineHelpText>auto populate from the Bus Work Order to Work order</inlineHelpText>
    <label>Sales Order</label>
    <length>25</length>
    <type>Text</type>
</CustomField>